@@ -1,5 +1,9 @@
 2007-05-27  George Giolfan  <georgegiolfan@yahoo.com>
 
+	* RangeBaseTest.cs: Added MaximumAdjustsValue test.
+
+2007-05-27  George Giolfan  <georgegiolfan@yahoo.com>
+
 	* RangeBaseTest.cs: Added ValueOutOfRange test.
 	
 2007-05-27  George Giolfan  <georgegiolfan@yahoo.com>
